<resources>
    <string name="app_name">HealthHelp</string>
    <string name="novo_local">Novo Local de Atendimento</string>
    <string name="descricao_logo">Logo do Sistema Health Help</string>
    <string name="locais_atendimento">Locais de Atendimento</string>
    <string name="hospital">Local de Atendimento</string>
    <string name="acao_indefinida">Indefinido</string>
    <string name="acao_salvar">Salvar</string>
    <string name="acao_marcar">Marcar</string>
    <string name="salvar">SALVAR</string>
    <string name="acao_editar">Editar</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="button_cards_Agendar">Agendar</string>

    <!-- Strings relacionadas à autenticação -->
    <string name="hint_login">login</string>
    <string name="hint_password">senha</string>
    <string name="botao_login">Autenticar</string>
    <string name="botao_registrar">Ainda não é membro? Registre-se!</string>
    <string name="titulo_autenticando">Autenticação</string>
    <string name="mensagem_autenticando">Por favor, aguarde enquanto o sistema realiza sua autenticação...</string>
    <string name="mensagem_autenticacao_sucesso">Autenticação bem sucedida</string>

    <!-- Strings relacionadas a formulários em geral -->
    <string name="erro_campo_obrigatorio">Este campo é obrigatório</string>
    <string name="activity_novo_atenidmento">Novo Atendimento</string>
    <string name="local_atendimento">Local Atendimento</string>
    <string name="profissional_saude">Profissional de Saúde</string>
    <string name="data_horario_atendimento">Data e Horário de Atendimento</string>

    <!-- Strings para cards -->
    <string name="visitas_medicas">Visitas Medicas</string>
    <string name="descricao_visitas_medicas">Veja visitas realizadas e futuras, e ainda agende novas</string>
    <string name="agenda_card">Agendas</string>
    <string name="descricao_agenda_card">Visualize suas agendas para diferentes intervalos de tempo</string>
    <string name="atuacao_card">Atuações</string>
    <string name="descricao_atuacao">Gerencie os locais onde você trabalha e as agendas para cada um deles</string>
    <string name="descricao_locais_atendimento">Gerencie os locais de atendimento disponíveis no sistema</string>

    <!-- Strings relacionadas ao formulário de local de atendimento -->
    <string name="activity_novo_local_atendimento">Novo Local de Atendimento</string>
    <string name="hint_nome_local_atendimento">Nome do Local de Atendimento</string>
    <string name="botao_adicionar_horario_atendimento_local">Adicionar Horário de Atendimento</string>

    <!-- Strings relacionadas à view de período de tempo -->
    <string name="excluir_periodo_tempo">Excluir período de tempo</string>
    <string name="botao_domingo">D</string>
    <string name="botao_segunda">S</string>
    <string name="botao_terca">T</string>
    <string name="botao_quarta">Q</string>
    <string name="botao_quinta">Q</string>
    <string name="botao_sexta">S</string>
    <string name="botao_sabado">S</string>
    <string name="data_final">Data Final</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="label_periodo_tempo_de">De</string>
    <string name="label_periodo_tempo_hora_final">Hora Final</string>
    <string name="label_periodo_tempo_a">a</string>
    <string name="label_periodo_tempo_hora_inicial">hora inicial</string>
    <string name="label_periodo_tempo_aas">às</string>
    <string name="erro_titulo_horario_atendimento_incompleto">Horário de Atendimento Incompleto</string>
    <string name="erro_dias_semana_vazio">É necessário informar pelo menos 1 dia da semana para cada horário de atendimento</string>

    <!-- Strings relacionados a menus -->
    <string name="logout">Logout</string>

    <!-- Strings relacionadas à view de lista de locais de atendimento -->
    <string name="titulo_carregamento_locais">Carregando...</string>
    <string name="mensagem_carregamento_locais">Carregando lista de locais de atendimento</string>


    <!-- Strings relacionadas à view atuações -->
    <string name="atuacoes">Atuações</string>
    <string name="atuacoes_titulo_dialog">Carregando atuações...</string>
    <string name="atuacoes_mensagem_dialog">Aguarde enquanto o sistema carrega a lista atuações</string>
    <string name="atuacoes_atuais">Atuações Atuais</string>
    <string name="atuacoes_anteriores">Atuações Anteriores</string>

    <string name="action_settings">Settings</string>

    <!-- Strings relacionadas à view de agenda -->
    <string name="acao_selecionar_data">Selecionar Data</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="mensagem_sem_horarios_disponiveis">Não existem horários disponíveis para essa data</string>

    <!-- Strings relacionadas à view de atuações de profissionais de saúde -->
    <string name="atuacoes_profissionais_saude_titulo_activity">Profissionais de Saúde</string>
    <string name="atuacoes_profissionais_saude_titulo_dialog">Carregando profissionais de saúde...</string>
    <string name="atuacoes_profissionais_saude_mensagem_dialog">Aguarde enquanto o sistema carrega os a lista de profissionais de saúde dos locais de atendimento nos quais você trabalha</string>
    <string name="activity_detalhe_de_atendimento">Detalhe de Atendimento</string>

    <!-- Strings relacionados à view de agendas dos profissionais -->
    <string name="agendas_profissional_titulo_activity">Agendas</string>
    <string name="agendas_profissional_titulo_dialog">Carregando agendas...</string>
    <string name="agendas_profissional_mensagem_dialog">Aguarde enquando o sistema busca suas agendas</string>
    <string name="agenda_profissionais">Agendas de Profissionais</string>

</resources>
