<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novo_local_atendimento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.ufg.inf.pes.healthhelp.view.FormularioLocalAtendimentoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_formulario_novo_local_atendimento"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextColor="@android:color/background_light"
            app:title="@string/activity_novo_local_atendimento"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edit_nome_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nome_local_atendimento"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/endereco"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefone"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="Horários de Atendimento:"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/container_horarios_atendimento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/botao_adicionar_horario_atendimento_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="adicionarHorarioAtendimentoAcaoBotao"
                android:text="@string/botao_adicionar_horario_atendimento_local"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
